--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
   ],
   "require": {
     "php": "^8.4",
+    "ext-json": "*",
     "ext-pdo": "*",
-    "ext-json": "*"
+    "guzzlehttp/guzzle": "^7.9"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "Inline\\": "src/"
     }
   },
   "require-dev": {
